# Not_The_End

./: .gitignore  Cargo.toml  LICENSE  MAKEFILE  README.md
.github/: FUNDING.yml
.github/workflows/: rustfmt.yml
src/: app.rs  honeycomb.rs  key_handler.rs  main.rs  mod.rs  ui.rs
src/app/: app_impl.rs  app_state.rs  character.rs  history.rs  honeycomb.rs  list.rs  mod.rs  types.rs
src/app/impl/: draw.rs  edit.rs  mod.rs  mouse.rs  navigation.rs
src/input/: handler.rs  mod.rs
src/input/handler/: editing.rs  keyboard.rs  mouse.rs
src/terminal/: cleanup.rs  setup.rs
src/ui/: mod.rs  render_draw_tab.rs  render_graph_tab.rs  render_list_tab.rs  render_log_tab.rs  render_popup.rs
src/ui/components/: mod.rs  popup_draw.rs  popup_edit.rs  tabs_bar.rs
src/ui/tabs/: mod.rs  tab_character.rs  tab_draw.rs  tab_list.rs  tab_log.rs
src/ui/utils/: display.rs  mod.rs
