[package]
name = "Not_The_End"
version = "1.0.8"
authors = ["Matteo Stievano <mstievano9@gmail.com>"]
edition = "2024"
description = "A game-friendly helper for Not the End (TTRPG)"
readme = "README.md"
repository = "https://github.com/DrStiev/Not_The_End"
license-file = "LICENSE"

[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
